--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: aloubier <aloubier@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/12/15 16:38:34 by aloubier          #+#    #+#              #
+#    Updated: 2023/12/15 16:38:46 by aloubier         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = megaphone 
 
 SRC_DIR = src/
